--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,30 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title> WebCalk, a web calculator</title>
 		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/webcalk.css') }}">
 	</head>
 	<body>
-		<p> Webcalk </p>
-		<form action="" method="post">
-	    	{{ form.hidden_tag() }}
-	        <p>
-	            {{ form.first.label }}<br>
-	            {{ form.first(size=32) }}
-	        </p>
-	        <p>
-	            {{ form.second.label }}<br>
-	            {{ form.second(size=32) }}
-	        </p>
-	        <p>
-	        	{{ form.operations.label }}<br>
-	        	{{ form.operations }}
-	        </p>
-	        <p>{{ form.submit() }}</p>
-	    </form>
+		<div class="header">
+			<h3> Webcalk </h3>
+		</div>
+		<div class="center">
+			<form action="" method="post">
+		    	{{ form.hidden_tag() }}
+		        <p>
+		            {{ form.first.label }}<br>
+		            {{ form.first(size=32) }}
+		        </p>
+		        <p>
+		            {{ form.second.label }}<br>
+		            {{ form.second(size=32) }}
+		        </p>
+		        <p>
+		        	{{ form.operations.label }}<br>
+		        	{{ form.operations }}
+		        </p>
+		        <p>{{ form.submit() }}</p>
+		    </form>
+		</div>
 	</body>
 </html>
